updatetuantruong1892.github.io

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/fifa/asset/css/base.css" />
-    <link rel="stylesheet" href="/fifa/asset/css/header.css" />
-    <link rel="stylesheet" href="/fifa/asset/css/main.css" />
-    <link rel="stylesheet" href="/fifa/asset/css/footer.css" />
+    <link rel="stylesheet" href="/base.css" />
+    <link rel="stylesheet" href="/header.css" />
+    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/footer.css" />
   </head>
   <body>
     <header class="header">
@@ -203,7 +203,9 @@
             <li>Manage Cookie Preferences</li>
           </ul>
         </div>
-        <p class="bottom-footer-coppy">Copyright © 1994 - 2023 FIFA. All rights reserved.</p>
+        <p class="bottom-footer-coppy">
+          Copyright © 1994 - 2023 FIFA. All rights reserved.
+        </p>
       </section>
     </footer>
   </body>
