--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="/header.css" />
     <link rel="stylesheet" href="/main.css" />
     <link rel="stylesheet" href="/footer.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://yt3.googleusercontent.com/GV75cdGEHaUZnQ_oJIzj_tGzLZCX2RyDKhn_75fFW6Mf_dpi8Fn6TaevTNhbrtLLBpk0upYt=s900-c-k-c0x00ffffff-no-rj"
+    />
   </head>
   <body>
     <header class="header">
