--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/base.css" />
-    <link rel="stylesheet" href="/header.css" />
-    <link rel="stylesheet" href="/main.css" />
-    <link rel="stylesheet" href="/footer.css" />
+    <link rel="stylesheet" href="./base.css" />
+    <link rel="stylesheet" href="./header.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./footer.css" />
     <link
       rel="icon"
       type="image/x-icon"
